<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/tv_horoscope"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/text_bg"
        android:gravity="center"
        android:text="@string/horoscope"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_horoscope">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Aries"
                android:text="@string/aries"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Taurus"
                android:text="@string/taurus"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Gemini"
                android:text="@string/gemini"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Cancer"
                android:text="@string/cancer"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Leo"
                android:text="@string/leo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Virgo"
                android:text="@string/virgo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Libra"
                android:text="@string/libra"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Scorpio"
                android:text="@string/scorpio"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Sagittarius"
                android:text="@string/sagittarius"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Capricorn"
                android:text="@string/capricorn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Aquarius"
                android:text="@string/aquarius"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_back"
                android:onClick="showHoroscope"
                android:tag="Pisces"
                android:text="@string/pisces"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>